--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "DOTENV_CONFIG_PATH=.env.test jest --no-cache --watchAll --setupFiles=dotenv/config",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "migrate:up": "npx dbmate up"
   },
   "repository": {
     "type": "git",
