--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/wecode-bootcamp-korea/40-2nd-ICE-CREAM-backend#readme",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -31,9 +32,12 @@
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/morgan": "^1.9.4",
     "jest": "^29.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "typescript": "^4.9.5"
   }
 }
