--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "DOTENV_CONFIG_PATH=.env.test jest --no-cache --watchAll --setupFiles=dotenv/config",
     "start": "nodemon server.js",
-    "migrate:up": "npx dbmate up"
+    "dev": "nodemon --exec node --loader ts-node/esm server.ts",
+    "migrate:up": "npx dbmate up",
+    "typeorm:create-migration": "typeorm migrations:create --config ./ormconfig.js --name MyMigration"
   },
   "repository": {
     "type": "git",
@@ -33,11 +35,14 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
