--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/*.ts",
     "test": "DOTENV_CONFIG_PATH=.env.test jest --no-cache --watchAll --setupFiles=dotenv/config",
-    "start": "nodemon server.js",
+    "start": "nodemon build/server.js",
     "migrate:up": "npx dbmate up"
   },
   "repository": {
@@ -28,12 +30,20 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.13.0",
     "jest": "^29.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
