--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon server.js",
     "dev": "nodemon --exec node --loader ts-node/esm server.ts",
     "migrate:up": "npx dbmate up",
-    "typeorm:create-migration": "typeorm migrations:create --config ./ormconfig.js --name MyMigration"
+    "typeorm:create-migration": "typeorm migrations:create --config ./ormconfig.js --name MyMigration",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,6 @@
   },
   "homepage": "https://github.com/wecode-bootcamp-korea/40-2nd-ICE-CREAM-backend#readme",
   "dependencies": {
-    "@types/express": "^4.17.17",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/supertest": "^2.0.12",
