--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/*.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm api/server.ts",
     "test": "DOTENV_CONFIG_PATH=.env.test jest --no-cache --watchAll --setupFiles=dotenv/config",
     "start": "nodemon build/server.js",
     "migrate:up": "npx dbmate up"
@@ -37,6 +37,7 @@
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
     "jest": "^29.3.1",
