--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           node-version: '19'
       - run : npm i
+      - run : npm test
       - run : npm list
 
 #     - uses: actions/checkout@v3
