--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
     "host": "localhost",
     "port": 3306,
     "username": "root",
-    "password": "jung4038",
+    "password": "Qwer!234",
     "database": "icecream",
     "entities": "build/entities/*.js",
     "synchronize": true
