[ADD]Codedeploy setting

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,21 +11,34 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    build-and-deploy:
+      runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [19.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '19'
+         node-version: ${{ matrix.node-version }}
+
+       - name: 환경변수 설정
+        working-directory: ./
+        run: |
+          pwd
+          touch .env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
+          cat .env
       - run : npm i
       - run : npm list
+
+        - name: ✨ 빌드 과정을 시작
+        working-directory: ./
+        run: yarn run build
 
 #     - uses: actions/checkout@v3
 #     - name: Use Node.js ${{ matrix.node-version }}
