--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,46 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: deploy
+# name: deploy
+
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
+# jobs:
+#   build:
+
+#     runs-on: ubuntu-latest
+
+#     strategy:
+#       matrix:
+#         node-version: [19.x]
+#         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: '19'
+
+#        - name: 환경변수 설정
+#         working-directory: ./
+#         run: |
+#           pwd
+#           touch .env
+#           echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
+#           cat .env
+#       - run : npm i
+#       - run : npm list
+
+#         - name: 빌드 과정 시작
+#         working-directory: ./
+#         run: npm run build --if-present
+
+
+name: Node.js CI
 
 on:
   push:
@@ -24,17 +63,5 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '19'
-
-       - name: 환경변수 설정
-        working-directory: ./
-        run: |
-          pwd
-          touch .env
-          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
-          cat .env
       - run : npm i
       - run : npm list
-
-        - name: 빌드 과정 시작
-        working-directory: ./
-        run: npm run build --if-present
